--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Arial';
+    font-style: normal;
+    font-weight: 700;
 }
 
 :root {
@@ -26,8 +29,6 @@
 
 .header-block-title,
 .footer-block-title {
-    font-family: 'Arial';
-    font-style: normal;
     font-weight: 400;
     font-size: 3.6rem;
     line-height: 41px;
@@ -49,14 +50,16 @@
     align-items: flex-start;
 }
 
-.wrapper-input {
+.wrapper-input,
+.wrapper-result {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     width: 100%;
 }
 
-.wrapper-input-block {
+.wrapper-input-block,
+.wrapper-result-block {
     display: flex;
     justify-content: center;
     align-items: space-between;
@@ -84,9 +87,6 @@
 }
 
 .txt {
-    font-family: 'Arial';
-    font-style: normal;
-    font-weight: 700;
     font-size: 1.2rem;
     line-height: 14px;
     text-align: center;
@@ -103,9 +103,6 @@
 .inp {
     width: 100%;
     text-align: center;
-    font-family: 'Arial';
-    font-style: normal;
-    font-weight: 700;
     font-size: 2.0rem;
     line-height: 23px;
     text-align: center;
@@ -115,17 +112,90 @@
     border-radius: 10px;
 }
 
+.inp:active,
+.inp:focus {
+    outline: 2px solid #003CD6;
+    border-radius: 7px;
+}
+
 .wrapper-line {
     width: 100%;
     border: 3px solid #003CD6;
     margin: 4% 0 4% 0;
 }
 
-.wrapper-result {}
+.wrapper-result {
+    margin-bottom: 5%;
+}
 
-.wrapper-result-block1 {}
+.wrapper-result-block {
+    width: 40%;
+    min-width: 410px;
+}
 
-.wrapper-result-block2 {}
+.result-block-wrapper {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    min-height: 46px;
+    margin-bottom: 27px;
+}
+
+.result-block-wrapper-title {
+    width: 70%;
+    height: 100%;
+}
+
+.result-title {
+    width: 100%;
+    height: 100%;
+    font-size: 2.0rem;
+    line-height: 23px;
+    color: #000000;
+}
+
+.result-block-wrapper-answer {
+    width: 30%;
+    height: 46px;
+    color: #000000;
+    background-color: #DCECFF;
+    border: 1px solid #DCECFF;
+    border-radius: 10px;
+}
+
+.result-block-wrapper-answer p {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    font-size: 2.0rem;
+    line-height: 23px;
+}
+
+.wrapper-result-block-btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40%;
+    min-width: 250px;
+    min-height: 46px;
+    background-color: #DCECFF;
+    border: 1px solid #003CD6;
+    border-radius: 10px;
+    font-size: 2.0rem;
+    line-height: 23px;
+    text-align: center;
+    color: #003CD6;
+    cursor: pointer;
+}
+
+.wrapper-result-block-btn:hover,
+.wrapper-result-block-btn:focus,
+.wrapper-result-block-btn:active {
+    background-color: #003CD6;
+    border: 1px solid #DCECFF;
+    color: #DCECFF;
+}
 
 .footer {
     background-color: #2D2D2D;
