--- a/css/style.css
+++ b/css/style.css
@@ -122,6 +122,7 @@
     width: 100%;
     border: 3px solid #003CD6;
     margin: 4% 0 4% 0;
+    background-color: #003CD6;
 }
 
 .wrapper-result {
