ready line1 page, don't work save pdf

--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -14,9 +14,9 @@
     .footer {
         height: 50px;
     }
-    .wrapper {
+    /* .wrapper {
         margin-top: 80px;
-    }
+    } */
     .input-block-wrapper {
         width: 100%;
     }
