--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 .header {
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
 }
 
@@ -75,7 +75,7 @@
     flex-direction: column;
     width: 90%;
     align-items: flex-start;
-    margin-top: 100px;
+    /* margin-top: 100px; */
 }
 
 .wrapper-input,
